# wibble

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  auth-spec.md  docker-entrypoint.sh  justfile  requisitos.md  todo.md
.github/workflows/: docker-publish.yml
database/: .gitignore  examples.sql
database/prisma/: schema.prisma
docs/: editorial_policy.md  operations.md  release_contracts.md
prompts/: edit_rewrite.txt  illustrator.txt  system_article.txt  system_article_research.txt  system_with_placeholders.txt  translation_system.txt
prompts/br/: system_article.txt  system_proposals.txt
src/: app_state.rs  article_id.rs  audit.rs  auth.rs  content.rs  create.rs  error.rs  get_images.rs  hot_score.rs  image.rs  image_generator.rs  image_info.rs  image_jobs.rs  image_status.rs  imagelist.rs  lib.rs  llm.rs  main.rs  newslist.rs  permissions.rs  rate_limit.rs  repository.rs  routes.rs  s3.rs  server.rs  sitemap.rs  tasklist.rs  test_support.rs  translate.rs  translation_jobs.rs  wibble_request.rs
src/app_state/: background_jobs.rs  db.rs  providers.rs  runtime.rs  schema_compat.rs
src/content/: comments.rs  page.rs  policy.rs  query.rs  render.rs
src/create/: clarify.rs  input.rs  mod.rs  orchestration.rs  page.rs  recovery.rs  wait.rs
src/entities/: article_job.rs  audit_log.rs  content.rs  content_comment.rs  content_image.rs  content_proposal.rs  content_vote.rs  examples.rs  generation_schedule.rs  gpt_log.rs  history_generation_fail.rs  horde_log.rs  image_data.rs  image_file.rs  language.rs  mod.rs  prelude.rs  search_history.rs  translation.rs  translation_job.rs
src/image_generator/: ai_horde.rs  dalle.rs  fallback.rs  huggingface.rs  replicate.rs  retrying.rs  stability.rs
src/llm/: article_generator.rs  edit_agent.rs  function_definition.rs  prompt_registry.rs  translate.rs
src/repositories/: articles.rs  examples.rs  images.rs  mod.rs  translations.rs
static/: alt.css  old.css  style.css
templates/: admin_articles.html  admin_jobs.html  base.html  base_pt.html  content.html  create.html  edit.html  edit_agent_preview.html  error.html  image_info.html  images.html  index.html  proposals.html  pt_create.html  pt_index.html  wait.html
tests/: rate_limit_integration.rs  template_parse.rs  template_render_smoke.rs
(+47 files in other folders)
